# OpenGL-master

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  ReadMe.md
DGERendering/: CMakeLists.txt
DGERendering/include/DGERendering/Core/: Camera.h  Light.h  OpenGLFrameBuffer.h  Shader.h
DGERendering/include/DGERendering/MeshRender/: AssimpMesh.h  DGEMesh.h  DGEMeshRender.h
DGERendering/include/DGERendering/Objects/: ObjectIDAllocator.h  SceneObject.h
DGERendering/include/DGERendering/Resources/: GGrid.h  ResourceRef.h  VertexHolder.h  mesh.h  model.h
DGERendering/src/Core/: Camera.cpp  Light.cpp  OpenGLFrameBuffer.cpp  Shader.cpp
DGERendering/src/MeshRender/: AssimpMesh.cpp  DGEMesh.cpp  DGEMeshRender.cpp
DGERendering/src/Objects/: ObjectIDAllocator.cpp  SceneObject.cpp
DGERendering/src/Resources/: GGrid.cpp
Example/: CMakeLists.txt
Example/1.getting_started/1.2.triangle/: grid.cpp  tri.cpp
Example/1.getting_started/1.3.shaders/: shader.cpp  shader_class.cpp
Example/1.getting_started/1.4.textures/: texture.cpp  texture_0.cpp  texture_exerices2.cpp  texture_exerices4.cpp  textures_combined.cpp
Example/1.getting_started/1.5.transformations/: transformation_exercise1.cpp  transformation_exercise2.cpp  transformations.cpp
Example/1.getting_started/1.6.coordinate_systems/: coordinate_systems.cpp  coordinate_systems_depth.cpp  coordinate_systems_multiple.cpp
Example/1.getting_started/1.7.camera/: camera_circle.cpp
Example/1.getting_started/2DTest/: 2DTest.cpp
Example/2.lighting/1.colors/: colors.cpp
Example/2.lighting/2.1.basic_lighting_diffuse/: basic_lighting_diffuse.cpp
Example/2.lighting/2.2.basic_lighting_specular/: basic_lighting_exercise1.cpp  (+3 more)
Example/3.model_loading/: CMakeLists.txt  model_loading.cpp
Example/5.advanced_lighting/: CMakeLists.txt
includes/learnopengl/: filesystem.h  model.h
misc/cmake-modules/: FindRendering.cmake  FindScopeGuard.cmake  Findimgui.cmake  Findimnodes.cmake  Findstb_image.cmake
resource_/shader/: 1.1.depth_testing.vs  1.advanced_lighting.fs  1.advanced_lighting.vs  2.1.basic_lighting.fs  2.1.basic_lighting.vs  2.2.basic_lighting.fs  2.3.basic_lighting.fs  2.3.basic_lighting.vs  2.4.basic_lighting.fs  2.4.basic_lighting.vs  3.1.materials.fs  3.1.materials.vs  3.2.blending.fs  3.blending.fs  4.1.lighting_maps.fs  4.1.lighting_maps.vs  4.1.texture.fs  4.2.lighting_maps.fs  4.2.texture.fs  4.3.lighting_maps.fs  5.1.light_casters.fs  5.1.transform.fs  5.1.transform.vs  6.1.cubemaps.fs  6.1.skybox.vs  6.2.cubemaps.fs  6.2.cubemaps.vs  grid_shader.fs  grid_shader.vs
(+19 files in other folders)
